<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Colonoprep</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Herzlich Willkommen!</string>
    <string name="administrateAppointment">Termin verwalten</string>
    <string name="preparation">Vorbereitung</string>
    <string name="foodList">Ernährungshinweise</string>
    <string name="checklist">Untersuchungs-Checkliste</string>
    <string name="settings">Einstellung</string>
    <string name="info">Info</string>
    <string name="title_activity_administrate_appointment">Terminverwaltung</string>
    <string name="addAppointment">Termin eintragen</string>
    <string name="changeAppointment">Termin ändern</string>
    <string name="deleteAppointment">Termin löschen</string>
    <string name="preparationOverview">Überblick</string>
    <string name="nextStep">Nächster Schritt</string>
    <string name="previousStep">Vorheriger Schritt</string>
    <string name="title_activity_preparation">Vorbereitung</string>
    <string name="title_addAppointment">Termin einragen</string>
    <string name="title_info">Info</string>
    <string name="medicineInfo">Medikamenten-information</string>
    <string name="imprint">Impressum</string>
    <string name="title_activity_overview">Überblick</string>
    <string name="title_activity_medicine_info">Medikamenteninformation</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_imprint">Impressum</string>
    <string name="imprint_text">Die Anwendung ist ein der Prototyp zum Referenzprojekt Colonoprep. Sie dient nur zu Demonstrationszwecken und darf nicht anderweitig eingesetzt werden. </string>
	<string name="hs">Hochschule München</string>
	<string name="company_name">Health Care Solutions</string>
	<string name="street">Lothstraße 46</string>
	<string name="zip_code">80797 München</string>
	<string name="contact">Kontakt:</string>
	<string name="medicine_name">Medikamentenname:</string>
	<string name="medicine_description">Beschreibung:</string>
	<string name="medicine_manufacturer">Hersteller:</string>
	<string name="safe">Speichern</string>
	<string name="stepDays">Tag:</string>
	<string name="stepDayDescribtionFuture">Tag vor der Untersuchung</string>
	<string name="stepDayDescribtionToday">Tag der Untersuchung</string>
	<string name="stepTime">Uhrzeit:</string>
	<string name="stepActionDrink">Bitte trinken Sie jetzt das Medikament.</string>
	<string name="stepAmountDescibtion">Erforderliche Menge:</string>
	<string name="action_diet">Bitte nehmen Sie keine feste Nahrung mehr zu sich!</string>
	<string name="action_drink">Bitte nehmen Sie jetzt den Drink zu sich!</string>
	<string name="time">Uhr</string>
</resources>
