<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/lblimprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_imprint"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblimprint"
        android:layout_marginTop="31dp"
        android:src="@drawable/moviprep_5" />

    <TextView
        android:id="@+id/txtimprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imgLogo"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:text="@string/imprint_text"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txtcontact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imgLogo"
        android:layout_below="@+id/imgLogo"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        android:textSize="15sp"

        android:text="@string/contact" />
    
        <TextView
        android:id="@+id/txths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imgLogo"
        android:layout_below="@+id/txtcompanyname"
        android:layout_marginTop="5dp"
        android:text="@string/hs" />
    
                <TextView
        android:id="@+id/txtcompanyname"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imgLogo"
        android:layout_below="@+id/txtcontact"
        android:layout_marginTop="5dp"
        android:text="@string/company_name" />
                
                <TextView
        android:id="@+id/txtstreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imgLogo"
        android:layout_below="@+id/txths"
        android:layout_marginTop="5dp"
        android:text="@string/street" />
                
                <TextView
        android:id="@+id/txtzipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imgLogo"
        android:layout_below="@+id/txtstreet"
        android:layout_marginTop="5dp"
        android:text="@string/zip_code" />
    
    

</RelativeLayout>