<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdministrateAppointmentActivity" >

    <TextView
        android:id="@+id/lblAdministrateAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_administrate_appointment" />

    <Button
        android:id="@+id/btnAddAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblAdministrateAppointment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        android:text="@string/addAppointment" />

    <Button
        android:id="@+id/btnChangeAppointment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnAddAppointment"
        android:layout_alignRight="@+id/btnAddAppointment"
        android:layout_below="@+id/btnAddAppointment"
        android:text="@string/changeAppointment" />

    <Button
        android:id="@+id/btnDeleteAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnChangeAppointment"
        android:layout_alignRight="@+id/btnAddAppointment"
        android:layout_below="@+id/btnChangeAppointment"
        android:text="@string/deleteAppointment" />
    
   <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblAdministrateAppointment"
        android:layout_marginTop="31dp"
        android:layout_toRightOf="@+id/lblAdministrateAppointment"
        android:src="@drawable/moviprep_5" />

</RelativeLayout>