<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/lblmedicineInfo"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:text="@string/title_activity_medicine_info"
        />
    
     <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblmedicineInfo"
        android:layout_marginTop="31dp"
        android:src="@drawable/moviprep_5" />

     <TextView
         android:id="@+id/txtmedicinename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/imgLogo"
         android:layout_below="@+id/imgLogo"
         android:layout_marginTop="24dp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
         android:text="@string/medicine_name" />

     <TextView
         android:id="@+id/txtmedicinedescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/imgLogo"
         android:layout_below="@+id/txtmedicinename"
         android:layout_marginTop="24dp"
         android:textColor="@android:color/black"
         android:text="@string/medicine_description" />
     
     <TextView
         android:id="@+id/txtmedicinemanufacturer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/imgLogo"
         android:layout_below="@+id/txtmedicinedescription"
         android:layout_marginTop="24dp"
         android:textColor="@android:color/black"
         android:text="@string/medicine_manufacturer" />
</RelativeLayout>
