<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/lblInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_info" />

    <Button
        android:id="@+id/btnMedicineInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imgLogo"
        android:layout_below="@+id/imgLogo"
        android:background="@drawable/bl"
        android:text="@string/medicineInfo"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="10px" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblInfo"
        android:layout_marginTop="31dp"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@+id/lblInfo"
        android:src="@drawable/moviprep_5" />

    <Button
        android:id="@+id/btnImprint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnMedicineInfo"
        android:layout_below="@+id/btnMedicineInfo"
        android:layout_marginTop="10px"
        android:background="@drawable/bl"
        android:text="@string/imprint"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>